# N-Body-Gravity-Simulation

./: CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
src/: config.txt  engine.cpp  engine.hpp  galaxy.hpp  logicShader.hlsl  main.cpp  octTree.cpp  octTree.hpp  particle.hpp  renderShader.hlsl  resetTexture.hlsl  utils.hpp  window.hpp
